Splitting out the builder/ project as a separate git repository.
This was done like this:

cd /tmp
mkdir vagrant-builder.git
cd vagrant-builder.git/
git init --bare
cd -

git clone --recursive ~/code/puppet/puppet-gluster
cd puppet-gluster/
git subtree split -P builder/ -b split
git push ../vagrant-builder.git/ split:master
cd -

git clone --recursive vagrant-builder.git/ vagrant-builder
cd vagrant-builder/
git remote remove origin
git remote add origin git@github.com:purpleidea/vagrant-builder.git

Hope that helps in case you're curious :)

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This is the builder/ project that used to live inside puppet-gluster.
+
+This is an elegant method for making base images for vagrant-libvirt.
+
 This Makefile builds vagrant base image ("boxes") for vagrant-libvirt.
 A short article describing the process can be found here:
 
